feat: mise à jour SecurityConfig.java depuis dev vers prod
- Copie du fichier SecurityConfig.java de la branche dev
- Conservation des URLs CORS de prod (http://localhost:3000 uniquement)
- Maintien de la configuration de sécurité existante