@@ -4,7 +4,6 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.env.Environment;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,8 +17,6 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import sn.boutique.xamxamboutik.security.constants.SecurityConstants;
 import sn.boutique.xamxamboutik.security.jwt.JwtTokenFilter;
@@ -33,104 +30,86 @@ import java.util.List;
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-
     private final JwtTokenFilter jwtTokenFilter;
     private final CustomUserDetailsService userDetailsService;
     private final PasswordEncoder passwordEncoder;
-    private final Environment env;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> {
-                    cors.configurationSource(corsConfigurationSource());
-                    System.out.println("Applying CORS configuration to HTTP requests");
-                })
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/auth/**").permitAll()
                         .requestMatchers(SecurityConstants.PublicUrls.SWAGGER_URLS).permitAll()
                         .requestMatchers("/ws/**").permitAll()
-                        .requestMatchers("/approvisionnement/**", "/categories/**", "/produits/**")
-                        .hasRole("GESTIONNAIRE")
+                        .requestMatchers("/approvisionnement/**", "/categories/**", "/produits/**", "/statistiques/**").hasRole("GESTIONNAIRE")
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .exceptionHandling(exceptions -> exceptions
-                        .authenticationEntryPoint((req, res, ex) ->
-                                customUnauthorizedResponse(res))
-                        .accessDeniedHandler((req, res, ex) ->
-                                customForbiddenResponse(res))
+                        .authenticationEntryPoint((request, response, authException) -> customUnauthorizedResponse(response))
+                        .accessDeniedHandler((request, response, accessDeniedException) -> customForbiddenResponse(response))
                 )
                 .authenticationProvider(authenticationProvider())
-                .addFilterBefore(jwtTokenFilter,
-                        UsernamePasswordAuthenticationFilter.class);
-
+                .addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
-        String allowedOrigins = env.getProperty("cors.allowed-origins");
-        List<String> origins = allowedOrigins != null ? Arrays.asList(allowedOrigins.split(",")) : List.of(
-                "http://localhost:3000",
-                "https://xamxamboutik.shop",
-                "https://darou-salam.xamxamboutik.shop",
-                "https://hadia.xamxamboutik.shop"
-        );
-        cfg.setAllowedOrigins(origins);
-        cfg.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+    public org.springframework.web.cors.CorsConfigurationSource corsConfigurationSource() {
+        var configuration = new org.springframework.web.cors.CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                SecurityConstants.HEADER_STRING,
+                "Content-Type",
+                "Authorization",
+                "x-client-type"
         ));
-        cfg.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
-        cfg.setExposedHeaders(List.of("Authorization"));
-        cfg.setAllowCredentials(true);
-
-        System.out.println("CORS configuration applied for origins: " + cfg.getAllowedOrigins());
-        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
-        src.registerCorsConfiguration("/**", cfg);
-        return src;
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
+        var source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
     }
 
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        var authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder);
         return authProvider;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    private void customUnauthorizedResponse(HttpServletResponse response)
-            throws IOException {
+    private void customUnauthorizedResponse(HttpServletResponse response) throws IOException {
         response.setStatus(HttpStatus.UNAUTHORIZED.value());
         response.setContentType(MediaType.APPLICATION_JSON_VALUE);
-        response.getWriter().write("""
-                     {
-                       "success": false,
-                       "message": "Vous n'êtes pas connecté ou votre token est invalide",
-                       "errorCode": "UNAUTHORIZED"
-                     }
-                     """);
+        String body = """
+                {
+                  "success": false,
+                  "message": "Vous n'êtes pas connecté ou votre token est invalide",
+                  "errorCode": "UNAUTHORIZED"
+                }
+                """;
+        response.getWriter().write(body);
     }
 
-    private void customForbiddenResponse(HttpServletResponse response)
-            throws IOException {
+    private void customForbiddenResponse(HttpServletResponse response) throws IOException {
         response.setStatus(HttpStatus.FORBIDDEN.value());
         response.setContentType(MediaType.APPLICATION_JSON_VALUE);
-        response.getWriter().write("""
-                     {
-                       "success": false,
-                       "message": "Vous êtes connecté, mais vous n'avez pas le rôle requis pour accéder à cette ressource",
-                       "errorCode": "ACCESS_DENIED"
-                     }
-                     """);
+        String body = """
+                {
+                  "success": false,
+                  "message": "Vous êtes connecté, mais vous n'avez pas le rôle requis pour accéder à cette ressource",
+                  "errorCode": "ACCESS_DENIED"
+                }
+                """;
+        response.getWriter().write(body);
     }
 }
